--- a/app/components/section/features/index.hbs
+++ b/app/components/section/features/index.hbs
@@ -71,7 +71,7 @@
 					</h4>
 					<p>
 						For highly-available and highly-scalable setups, SurrealDB can be run on top of a
-						<Link @link="https://surrealkv.org">SurrealKV</Link> cluster, with the
+						SurrealKV cluster, with the
 						ability to horizontally scale to <code>100+</code> terabytes of data.
 					</p>
 				</block>
