--- a/app/templates/docs/surrealql/functions/array.hbs
+++ b/app/templates/docs/surrealql/functions/array.hbs
@@ -845,11 +845,11 @@
 		</Code>
 		<p>The function also accepts a second <Link @link="docs.surrealql.datamodel.simple">boolean</Link> parameter which determines the sorting direction. The second parameter can be <Ascua::Prism::Inline @language="surql" @code="true" /> for ascending order, or <Ascua::Prism::Inline @language="surql" @code="false" /> for descending order.</p>
 		<Code @name="docs-surrealql-functions-array-sort-2.surql" text="API Definition">
-			count(array, bool) -> array
+			array::sort(array, bool) -> array
 		</Code>
 		<p>The function also accepts a second <Link @link="docs.surrealql.datamodel.simple">string</Link> parameter which determines the sorting direction. The second parameter can be <Ascua::Prism::Inline @language="surql" @code="'asc'" /> for ascending order, or <Ascua::Prism::Inline @language="surql" @code="'desc'" /> for descending order.</p>
 		<Code @name="docs-surrealql-functions-array-sort-3.surql" text="API Definition">
-			count(array, string) -> array
+			array::sort(array, string) -> array
 		</Code>
 		<p>The following examples show this function, and its output, when used in a select statement:</p>
 		<codes vertical>
